fix overflow on dashboard issue

--- a/admin/assets/scss/admin.scss
+++ b/admin/assets/scss/admin.scss
@@ -1718,6 +1718,7 @@ x:-o-prefocus {
 .wrap.slimstat-config,
 .wrap.slimstat {
   box-sizing: border-box;
+  overflow: hidden;
 
   * {
     box-sizing: border-box;
